# EyeLiner

./: .gitignore  README.md  create_amd_dataset.py  demo.ipynb  eval.sh  keypoint_registrator.py  keypoint_registrator_sequence.py  pyproject.toml  run.sh  run_benchmarks.sh
misc/: eval.sh
scripts/scripts_cervix/: register_cervix_sequence.sh
scripts/scripts_coris_amd_multimodal_experiments/: amd_multimodal_experiments_eval.sh  amd_multimodal_experiments_run.sh
scripts/scripts_coris_glaucoma_experiments/: coris_glaucoma_experiments_eval.sh  coris_glaucoma_experiments_run.sh
scripts/scripts_fire_experiments/: fire_experiments_eval.sh  fire_experiments_run.sh
scripts/scripts_loftr/: coris_run.sh  fire_run.sh  sigf_run.sh
scripts/scripts_sigf_experiments/: sigf_experiments_eval.sh  sigf_experiments_run.sh
scripts/scripts_splg/: amd_coris.sh  amd_register_sequence.sh  coris_run.sh  fire_run.sh  save_csvs.py  sigf_run.sh
src/: create_ppt.py  data.py  detectors.py  eval.py  eyeliner.py  lambda_cnn.py  main.py  reg_utils.py  sequential_registrator.py  utils.py  visualize.py
